
Release 5.2.2 (unreleased)
==========================

Bug fixes
---------

- Fix initialisation of some turbulence constants. Constant/Models concerned:
  * sigmae (for all RSM models)
  * csrij (EB-RSM model).

- Fix allocation of pmappers to scalar fields in atmospheric aerosols model. 

- Fix allocation size for values at injection in case of mass source terms
  with coupled Reynolds stress solver.

- GUI: fix missing update of modified scalar names for groundwater flows.

- GUI: fix loss of previous deactivated wall function setting when reopened.

- trackcvg: allow saving state only when data is loaded and loading it when
  saved state is present.

- CFDStudy: allow loading studies with no MESH or POST subdirectories.

- Fix improved hydrostatic treatment and PISO-like iterations
  (nterup > 1 and iphydr = 1).

Release 5.2.1 (Sep 26 2018)
===========================

Bug fixes
---------

- Lagrangian module: fix resuspension when having internal deposition.

- Compressible model: fix inverted arguments for user velocity source terms.

- Fixes to atmospheric chemistry model.

- Fix build on Mac OS X.

- Radiative model: fix GUI-defined BC selection between reflecting wall and
  prescribed flux BC for grey/black wall.

- Fix minor memory leak in histogram output.

- GUI: fix various crashes with th PyQt API 2(mostly on systems using PyQt5,
  as these default to the concerned API).

- GUI: fixes for addition and handling of coal classes.

- GUI: "rij" (coupled) field must return a NULL pointer for uncoupled RSM
  if initilization of turbulent variables is set by formula.

- Fix an uninitialised option (reconstruction flag) if arakawa coef. is 0 and
  there is anisotropic diffusion on pressure increment.

- GUI: fix default time stepping type (unsteady) when information missing
  from the XML file.

- Fix boundary value optional post-processing for scalars for other
  boundary conditions than walls.

- Fix face external force projection with tensorial diffusion