@@ -157,7 +157,7 @@ endif
 ! we assume that the vertical direction (given by the gravity)
 ! is ALWAYS oriented along the z axis.
 
-if ( ippmod(iatmos).eq.2.and.modsedi.eq.1 ) then ! for humid atmosphere physics only
+if (ippmod(iatmos).eq.2.and.modsedi.eq.1) then ! for humid atmo. physics only
 
   call field_get_val_s(iliqwt, cpro_liqwt)
   call field_get_val_s(itempc, cpro_tempc)
@@ -167,6 +167,7 @@ if ( ippmod(iatmos).eq.2.and.modsedi.eq.1 ) then ! for humid atmosphere physics 
   do iel = 1, ncelet
     qliqmax = max(cpro_liqwt(iel),qliqmax)
   enddo
+  if (irangp.ge.0) call parmax(qliqmax)
 
   if(qliqmax.gt.1e-8)then
 
@@ -318,6 +319,9 @@ do iel = 1, ncel
   endif
   r3max = max(r3(iel),r3max)
 enddo
+
+if (irangp.ge.0) call parmax (r3max)
+
 end subroutine define_r3
 
 ! *******************************************************************
